--- a/docs/locale/fr/LC_MESSAGES/about/credits.po
+++ b/docs/locale/fr/LC_MESSAGES/about/credits.po
@@ -37,10 +37,10 @@ msgid ""
 msgstr ""
 "La version bêta de la norme relative aux données sur la propriété effective "
 "a été rédigée par Tim Davies (`Open Data Services "
-"<https://www.opendataservices.coop>`_) en collaboration avec Ben Symonds "
-"(`OpenCorporates <https://www.opencorporates.com>`_), Chris Taggart "
-"(`OpenCorporates <https://www.opencorporates.com>`_) et Jack Lord (`Open "
-"Data Services <https://www.opendataservices.coop>`_), et avec la "
+"<https://www.opendataservices.coop>`__) en collaboration avec Ben Symonds "
+"(`OpenCorporates <https://www.opencorporates.com>`__), Chris Taggart "
+"(`OpenCorporates <https://www.opencorporates.com>`__) et Jack Lord (`Open "
+"Data Services <https://www.opendataservices.coop>`__), et avec la "
 "contribution du :doc:`groupe de travail sur la norme relative aux données "
 "<governance>`."
 
@@ -99,7 +99,7 @@ msgid ""
 msgstr ""
 "La version 0.4 a été rédigée par Kadie Armstrong, Emma Howard, Kathryn "
 "Irish, Rachel Vint et Lewis Spurgin (`Open Data Services "
-"<https://www.opendataservices.coop>`_), avec le travail technique d'Amy Guy "
-"et Ed Lloyd-Davies (`Open Data Services "
-"<https://www.opendataservices.coop>`_) et la contribution du groupe de "
+"<https://www.opendataservices.coop>`__), avec le travail technique d'Amy Guy"
+" et Ed Lloyd-Davies (`Open Data Services "
+"<https://www.opendataservices.coop>`__) et la contribution du groupe de "
 "travail sur la norme relative aux données."
